# codex-provider-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: run.ps1  run.sh
src/codex_provider_manager/: __init__.py  backup.py  cli.py  config.py  env.py  i18n.py  models.py  providers.py  sessions.py  tui.py  utils.py
tests/: test_config.py  test_env.py  test_i18n.py  test_models.py  test_sessions.py  test_tui_helpers.py  test_utils.py
