[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-provider-manager"
version = "0.1.0"
description = "Cross-platform CLI for managing Codex providers, profiles, models, and session provider visibility."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "codex-provider-manager contributors" }]
keywords = ["codex", "openai", "cli", "tui", "provider", "profile", "sessions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "tomlkit>=0.13.0",
  "rich>=13.7.0",
  "questionary>=2.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "requests-mock>=1.11.0",
]

[project.scripts]
codex-provider-manager = "codex_provider_manager.cli:main"
cpm = "codex_provider_manager.cli:main"

[project.urls]
Homepage = "https://github.com/PYXXXX/codex-provider-manager"
Issues = "https://github.com/PYXXXX/codex-provider-manager/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
